Resolves: tdf#141565 Correct character sequence for Devanagari unique ID

A copy-paste error of the Farsi sequence.

Change-Id: Ib19f97f0bc3bf018d659f8e998d0daa71e1d5c24
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136958
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit dbef922b7ac63c56bd534c1475790198a64131b1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/136932
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>